--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -297,3 +297,29 @@
 #backToEventListBtn{
   margin-bottom: 10px;
 }
+
+.form-control {
+    margin: 5px;
+}
+
+/*File upload*/
+.imgPreview {
+  text-align: center;
+  margin: 5px;
+  height: 300px;
+  width: 100%;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  border-top: 3px solid gray;
+  border-bottom: 3px solid gray;
+}
+
+.imgPreview img {
+  width: 100%;
+  height: 100%;
+}
+
+.previewText {
+  width: 100%;
+  margin-top: 20px;
+}
